# ckanext-datavic-reporting

./: MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/datavic_reporting/: authorisation.py  cli.py  command.py  constants.py  controller.py  helpers.py  mailer.py  member_report_controller.py  model.py  plugin.py  report_models.py  validators.py
ckanext/datavic_reporting/fanstatic/: datavic_reporting.js  webassets.yml
ckanext/datavic_reporting/logic/: action.py  auth.py  schema.py  validators.py
ckanext/datavic_reporting/logic/action/: create.py  delete.py  get.py  update.py
ckanext/datavic_reporting/migration/datavic_reporting/: alembic.ini
ckanext/datavic_reporting/migration/datavic_reporting/versions/: 1808d0f56068_create_report_job_table.py  390031f5cbb4_create_report_schedule_table.py
ckanext/datavic_reporting/model/: __init__.py  report_models.py
ckanext/datavic_reporting/templates/admin/: config.html  reports.html
ckanext/datavic_reporting/templates/emails/bodies/: scheduled_report.txt
ckanext/datavic_reporting/templates/emails/subjects/: scheduled_report.txt
ckanext/datavic_reporting/templates/member/: report.html
ckanext/datavic_reporting/templates/user/: dashboard.html  dashboard_organizations.html  report_jobs.html  report_schedules.html  reports.html
ckanext/datavic_reporting/tests/: conftest.py  test_plugin.py
ckanext/datavic_reporting/tests/logic/: test_action.py  test_validators.py
ckanext/datavic_reporting/views/: __init__.py  member_report.py  reporting.py  scheduling.py
