[metadata]
name = ckanext-datavic-reporting
version = 0.1.0
description = DataVic reporting extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com//ckanext-datavic-reporting
author = Salsa Digital
author_email = info@salsadigital.com.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
                 typing-extensions
                 ckantoolkit>=0.0.7
                 ckanext-toolbelt >=0.2.3, <1.0.0
include_package_data = True

[options.entry_points]
ckan.plugins =
             datavic_reporting = ckanext.datavic_reporting.plugin:DataVicReportingPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/datavic-reporting/i18n/ckanext-datavic-reporting.pot
width = 80

[init_catalog]
domain = ckanext-datavic-reporting
input_file = ckanext/datavic-reporting/i18n/ckanext-datavic-reporting.pot
output_dir = ckanext/datavic-reporting/i18n

[update_catalog]
domain = ckanext-datavic-reporting
input_file = ckanext/datavic-reporting/i18n/ckanext-datavic-reporting.pot
output_dir = ckanext/datavic-reporting/i18n
previous = true

[compile_catalog]
domain = ckanext-datavic-reporting
directory = ckanext/datavic-reporting/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
